data/derived/comb/progs/unify/prog4559.ml.out
Characters 559-603:
  | 5 -> buildSpecial1(build(rand, depth-1), build(rand, depth-1))
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr * expr * expr
